- Added save button and service calls for saving Forms. - Added name of form type and the form type's Municipality on the EditForm page Files modified - [FormService.java,EditForm.html,Forms.html]

--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -101,8 +101,8 @@
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="formSaveControlRow">
-                                    <wm-gridcolumn columnwidth="12" name="formSaveControlColumn">
-                                        <wm-button class="btn-default" caption="Button" type="button" margin="unset 0.5em" name="button2"></wm-button>
+                                    <wm-gridcolumn columnwidth="12" name="formSaveControlColumn" horizontalalign="right">
+                                        <wm-button class="btn-primary" caption="Save" type="button" margin="unset 0.5em" name="btnSaveFormData" iconclass="wi wi-save" on-click="Variables.svSaveFormData.invoke()"></wm-button>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
