--- a/src/main/webapp/pages/UserProjects/UserProjects.html
+++ b/src/main/webapp/pages/UserProjects/UserProjects.html
@@ -1,4 +1,4 @@
-<wm-page data-ng-controller="MyCartPageController" pagetitle="My Cart" name="page1">
+<wm-page data-ng-controller="UserProjectsPageController" pagetitle="User Projects" name="page1">
     <wm-header content="header" name="header1"></wm-header>
     <wm-top-nav content="topnav" name="top_nav1"></wm-top-nav>
     <wm-content name="content1">
@@ -11,13 +11,10 @@
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow2">
-                    <wm-gridcolumn columnwidth="12" name="gridcolumn3"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn4"></wm-gridcolumn>
                 </wm-gridrow>
             </wm-layoutgrid>
         </wm-page-content>
     </wm-content>
     <wm-footer content="footer" name="footer1"></wm-footer>
-    <wm-view class="dialog-view" name="view1">
-        <wm-pagedialog name="pagedialogNewForm" title="New Form" content="NewForm" oktext="Close" iconclass=""></wm-pagedialog>
-    </wm-view>
 </wm-page>
