--- a/src/main/webapp/pages/ManageMunicipalityVendors/ManageMunicipalityVendors.html
+++ b/src/main/webapp/pages/ManageMunicipalityVendors/ManageMunicipalityVendors.html
@@ -12,7 +12,7 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow1">
                     <wm-gridcolumn columnwidth="6" name="gridcolumn1" padding="2em unset">
-                        <wm-label padding="unset 0.5em" name="label1" caption="Vendor Review" fontweight="bold" fontsize="15"></wm-label>
+                        <wm-label padding="unset 0.5em" name="label1" caption="Municipality Vendor Management" fontweight="bold" fontsize="15"></wm-label>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="6" name="gridcolumn2" padding="2em unset">
                         <wm-composite name="composite1">
@@ -25,7 +25,7 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow19">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn31_1">
-                        <wm-panel iconclass="wi wi-account-circle" autoclose="outsideClick" name="panel1" title="Pending Review" class="panel-primary">
+                        <wm-panel iconclass="wi wi-work" autoclose="outsideClick" name="panel1" title="Pending Review" class="panel-primary">
                             <wm-livegrid formlayout="dialog" name="livegrid2">
                                 <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.ReviewVendorApprovals.dataSet" navigation="Classic" name="gridPending" filtermode="multicolumn" exportformat="EXCEL">
                                     <wm-grid-column binding="municipalities.municipalityName" caption="Municipality" type="string" generator="assigned" show="true" related-entity-name="Municipalities" readonly="false"></wm-grid-column>
@@ -72,7 +72,7 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow20">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn32">
-                        <wm-panel iconclass="wi wi-account-circle" autoclose="outsideClick" name="panel2" title="Approved Vendors" class="panel-primary">
+                        <wm-panel iconclass="wi wi-work" autoclose="outsideClick" name="panel2" title="Approved Vendors" class="panel-primary">
                             <wm-livegrid formlayout="dialog" name="livegrid2_1">
                                 <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.ApprovedVendorApprovals.dataSet" navigation="Classic" name="gridApprovedVendors" filtermode="multicolumn" exportformat="EXCEL">
                                     <wm-grid-column binding="vendor.companyName" caption="Company" type="string" generator="assigned" show="true" related-entity-name="Vendor" readonly="false"></wm-grid-column>
@@ -126,7 +126,7 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow21">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn33">
-                        <wm-panel iconclass="wi wi-account-circle" autoclose="outsideClick" name="panel3" title="Suspended Vendors" class="panel-primary">
+                        <wm-panel iconclass="wi wi-work" autoclose="outsideClick" name="panel3" title="Suspended Vendors" class="panel-primary">
                             <wm-livegrid formlayout="dialog" name="livegrid3">
                                 <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.SuspendedVendorApprovals.dataSet" navigation="Classic" name="gridSuspended" filtermode="multicolumn" exportformat="EXCEL">
                                     <wm-grid-column binding="vendor.companyName" caption="Company" type="string" generator="assigned" show="true" related-entity-name="Vendor" readonly="false"></wm-grid-column>
@@ -281,29 +281,16 @@
                 <wm-form-action key="cancel" class="form-cancel btn-secondary" iconclass="wi wi-cancel" action="cancel()" display-name="Cancel" show="true" type="button" update-mode="true"></wm-form-action>
                 <wm-form-action key="save" class="form-save btn-success" iconclass="wi wi-save" display-name="Save" show="true" type="submit" update-mode="true"></wm-form-action>
             </wm-liveform>
-            <wm-grid title="Licenses" dataset="bind:Variables.VendorLicensesData.dataSet" navigation="Classic" name="grid5" class="panel-primary" filtermode="multicolumn" exportformat="EXCEL" iconclass="wi wi-notepad">
-                <wm-grid-column binding="vendorLicenseTypes.licenseType" caption="License Type" type="string" primary-key="false" generator="assigned" readonly="true" show="true" related-entity-name="VendorLicenseTypes"></wm-grid-column>
-                <wm-grid-column binding="licenseNumber" caption="License Number" type="string" generator="assigned" readonly="true" show="true"></wm-grid-column>
-                <wm-grid-column binding="issuedDate" caption="Date Issued" type="date" generator="assigned" readonly="true" datepattern="MM-dd-yyyy" formatpattern="toDate" show="true"></wm-grid-column>
-                <wm-grid-column binding="issuingAuthority" caption="Issuing Authority" type="string" generator="assigned" readonly="true" show="true"></wm-grid-column>
-                <wm-grid-column binding="expirationDate" caption="Expiration Date" type="date" generator="assigned" readonly="true" datepattern="MM-dd-yyyy" formatpattern="toDate" show="true"></wm-grid-column>
-                <wm-grid-column binding="scope" caption="Scope" type="string" generator="assigned" readonly="true" show="true"></wm-grid-column>
-            </wm-grid>
-            <wm-livegrid name="livegrid5_1"></wm-livegrid>
-            <wm-livegrid name="livegrid5">
-                <wm-grid gridfirstrowselect="true" title="Vendor List" dataset="bind:Variables.VendorProfile.dataSet" navigation="Classic" name="grid4" show="false">
-                    <wm-grid-column binding="id" caption="Id" generator="identity" pcdisplay="true" mobiledisplay="true" type="integer" primary-key="true" readonly="true"></wm-grid-column>
-                    <wm-grid-column binding="companyName" caption="Company Name" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string" readonly="true"></wm-grid-column>
-                    <wm-grid-column binding="address1" caption="Address1" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string" readonly="true"></wm-grid-column>
-                    <wm-grid-column binding="address2" caption="Address2" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string" readonly="true"></wm-grid-column>
-                    <wm-grid-column binding="city" caption="City" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string" readonly="true"></wm-grid-column>
-                    <wm-grid-column binding="country" caption="Country" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string" readonly="true"></wm-grid-column>
-                    <wm-grid-column binding="postalCode" caption="Postal Code" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string" readonly="true"></wm-grid-column>
-                    <wm-grid-column binding="faxNumber" caption="Fax Number" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string" readonly="true"></wm-grid-column>
-                    <wm-grid-column binding="companyPhone" caption="Company Phone" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string" readonly="true"></wm-grid-column>
-                    <wm-grid-column binding="altPhone" caption="Alt Phone" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string" readonly="true"></wm-grid-column>
+            <wm-panel iconclass="wi wi-notepad" autoclose="outsideClick" name="panel4" title="Licenses" class="panel-primary">
+                <wm-grid title="" dataset="bind:Variables.VendorLicensesData.dataSet" navigation="Classic" name="grid5" filtermode="multicolumn" exportformat="EXCEL" iconclass="">
+                    <wm-grid-column binding="vendorLicenseTypes.licenseType" caption="License Type" type="string" primary-key="false" generator="assigned" readonly="true" show="true" related-entity-name="VendorLicenseTypes"></wm-grid-column>
+                    <wm-grid-column binding="licenseNumber" caption="License Number" type="string" generator="assigned" readonly="true" show="true"></wm-grid-column>
+                    <wm-grid-column binding="issuedDate" caption="Date Issued" type="date" generator="assigned" readonly="true" datepattern="MM-dd-yyyy" formatpattern="toDate" show="true"></wm-grid-column>
+                    <wm-grid-column binding="issuingAuthority" caption="Issuing Authority" type="string" generator="assigned" readonly="true" show="true"></wm-grid-column>
+                    <wm-grid-column binding="expirationDate" caption="Expiration Date" type="date" generator="assigned" readonly="true" datepattern="MM-dd-yyyy" formatpattern="toDate" show="true"></wm-grid-column>
+                    <wm-grid-column binding="scope" caption="Scope" type="string" generator="assigned" readonly="true" show="true"></wm-grid-column>
                 </wm-grid>
-            </wm-livegrid>
+            </wm-panel>
         </wm-dialog>
     </wm-view>
 </wm-page>
