--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -31,7 +31,7 @@
                                 <wm-gridrow name="gridrow9" padding=".5em unset">
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn16"></wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn17">
-                                        <wm-composite name="composite1">
+                                        <wm-composite name="composite1" required="false">
                                             <wm-label class="col-md-3 control-label" name="label4" caption="Status"></wm-label>
                                             <wm-container class="col-md-9" name="container2_1">
                                                 <wm-select name="selectStatus" dataset="bind:Variables.FormStatus.dataSet" datafield="All Fields" displayfield="status" datavalue="bind:defaultObjectForSelectStatus"></wm-select>
@@ -83,19 +83,19 @@
                                 </wm-gridrow>
                                 <wm-gridrow ng-repeat="formField in Variables.lvFormTypeFields.dataSet.data" ng-if="colName != 'ID' &amp;&amp; colName != 'FormGUID'" name="fieldGridrow{{$index}}">
                                     <wm-gridcolumn columnwidth="12" name="fieldGridcolumn{{$index}}">
-                                        <wm-composite name="fieldComposite{{$index}}">
+                                        <wm-composite name="fieldComposite{{$index}}" required="{{formField.required}}">
                                             <wm-label class="col-md-3 control-label" name="fieldLabel{{$index}}" caption="{{formField.label}}"></wm-label>
                                             <wm-container class="col-md-9" name="container3">
-                                                <wm-text ng-if="formField.formFieldTypes.label == 'Text'" name="fieldValue{{formField.fieldName}}" placeholder="Please enter {{formField.label}}" datavalue="bind:Variables.svGetFormData.dataSet[formField.fieldName]"
-                                                defaultvalue="bind:'{{formField.defaultValue}}'"></wm-text>
-                                                <wm-text ng-if="formField.formFieldTypes.label == 'Number'" name="fieldValue{{fieldLabel.fieldName}}" placeholder="Please enter {{formField.label}}" datavalue="bind:Variables.svGetFormData.dataSet[formField.fieldName]"
-                                                defaultvalue="bind:'{{formField.defaultValue}}'" type="number"></wm-text>
-                                                <wm-textarea ng-if="formField.formFieldTypes.label == 'Long Text'" name="fieldValue{{formField.fieldName}}" placeholder="Please enter {{formField.label}}" datavalue="bind:Variables.svGetFormData.dataSet[formField.fieldName]"
-                                                defaultvalue="bind:'{{formField.defaultValue}}'"></wm-textarea>
-                                                <wm-date ng-if="formField.formFieldTypes.label == 'Date'" name="fieldValue{{formField.fieldName}}" placeholder="Please enter {{formField.label}}" datavalue="bind:Variables.svGetFormData.dataSet[formField.fieldName]"
-                                                defaultvalue="bind:'{{formField.defaultValue}}'"></wm-date>
-                                                <wm-datetime ng-if="formField.formFieldTypes.label == 'Date+Time'" name="fieldValue{{formField.fieldName}}" placeholder="Please enter {{formField.label}}" datavalue="bind:Variables.svGetFormData.dataSet[formField.fieldName]"
-                                                defaultvalue="bind:'{{formField.defaultValue}}'"></wm-datetime>
+                                                <input class="form-control app-textbox" apply-styles="" role="input" focus-target="" title="" ng-model="Variables.svGetFormData.dataSet[formField.fieldName]" pattern=".*" accesskey="" ng-model-options="{ updateOn:'blur change', debounce: 0 ,allowInvalid: false}"
+                                                ng-if="formField.formFieldTypes.label == 'Text'" name="fieldValue{{formField.fieldName}}" placeholder="Please enter {{formField.label}}" type="text">
+                                                <input class="form-control app-textbox" apply-styles="" role="input" focus-target="" title="" ng-model="Variables.svGetFormData.dataSet[formField.fieldName]" pattern=".*" accesskey="" ng-model-options="{ updateOn:'blur change', debounce: 0 ,allowInvalid: false}"
+                                                ng-if="formField.formFieldTypes.label == 'Number'" name="fieldValue{{formField.fieldName}}" placeholder="Please enter {{formField.label}}" type="number">
+                                                <textarea class="form-control app-textarea" apply-styles="" role="input" focus-target="" ng-model="Variables.svGetFormData.dataSet[formField.fieldName]" title="" accesskey="" ng-model-options="{ updateOn:'blur change', debounce: 0}"
+                                                ng-if="formField.formFieldTypes.label == 'Long Text'" name="fieldValue{{formField.fieldName}}" placeholder="Please enter {{formField.label}}"></textarea>
+                                                <datetime-picker ng-if="formField.formFieldTypes.label == 'Date'" placeholder="Please enter {{formField.label}}" date="Variables.svGetFormData.dataSet[formField.fieldName]" name="{{formField.fieldName}}"
+                                                time="false"></datetime-picker>
+                                                <datetime-picker ng-if="formField.formFieldTypes.label == 'Date+Time'" placeholder="Please enter {{formField.label}}" date="Variables.svGetFormData.dataSet[formField.fieldName]" name="{{formField.fieldName}}"
+                                                time="true"></datetime-picker>
                                             </wm-container>
                                         </wm-composite>
                                     </wm-gridcolumn>
@@ -106,6 +106,7 @@
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
+                            <wm-spinner show="false" name="spinner1" servicevariabletotrack="svGetFormData" caption=""></wm-spinner>
                         </wm-panel>
                     </wm-gridcolumn>
                 </wm-gridrow>
