--- a/src/main/webapp/pages/ResetPassword/ResetPassword.html
+++ b/src/main/webapp/pages/ResetPassword/ResetPassword.html
@@ -11,8 +11,8 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow8">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn20">
-                        <wm-form errormessage="" captionposition="top" title="Reset Password" enctype="application/x-www-form-urlencoded" method="get" dataset="resetPassword" captionalign="left" name="form1" on-beforesubmit="form1Beforesubmit($event, $scope, $data)"
-                        show="bind:Variables.ValidateToken.dataSet.value === 1" on-result="form1Result($event, $scope, $data)" postmessage="Password updated successfully" iconclass="wi wi-vpn-key">
+                        <wm-form errormessage="" captionposition="top" title="Reset Password" enctype="application/x-www-form-urlencoded" method="get" dataset="resetPassword" captionalign="left" name="form1" on-beforesubmit="form1Beforesubmit($event, $scope, $data)" show="bind:Variables.ValidateToken.dataSet.value === 1"
+                        on-result="form1Result($event, $scope, $data)" postmessage="Password updated successfully" iconclass="wi wi-vpn-key">
                             <wm-layoutgrid columns="1" name="layoutgrid2">
                                 <wm-gridrow name="gridrow6">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn10">
@@ -28,8 +28,8 @@
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow10">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn24">
-                                        <wm-form-field name="retypePassword" displayname="Confirm Password" widget="text" show="true" type="custom" placeholder="Enter Password" regexp="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[$@$!%*?&amp;])[A-Za-z\d$@$!%*?&amp;]{8,}"
-                                        required="required" inputtype="password" key="retypePassword"></wm-form-field>
+                                        <wm-form-field name="retypePassword" displayname="Confirm Password" widget="text" show="true" type="custom" placeholder="Enter Password" regexp="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[$@$!%*?&amp;])[A-Za-z\d$@$!%*?&amp;]{8,}" required="required" inputtype="password"
+                                        key="retypePassword"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
@@ -43,7 +43,7 @@
                 <wm-gridrow name="gridrow2">
                     <wm-gridcolumn columnwidth="4" name="gridcolumn3"></wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn6" horizontalalign="center">
-                        <wm-label padding="unset 0.5em" name="label3" caption="Invalid Token, Please contact Admin" show="bind:Variables.ValidateToken.dataSet.value === 0" fontweight="bold" fontsize="20"></wm-label>
+                        <wm-label padding="unset 0.5em" name="label3" caption="Your password reset link has expired. Please contact Support" show="bind:Variables.ValidateToken.dataSet.value === 0" fontweight="bold" fontsize="20"></wm-label>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn4"></wm-gridcolumn>
                 </wm-gridrow>
